--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,11 +1,16 @@
+plugins:
+  - jest
+  - babel
+
 env:
-  es6: true
   node: true
-extends: airbnb-base
-globals:
-  Atomics: readonly
-  SharedArrayBuffer: readonly
-parserOptions:
-  ecmaVersion: 2018
-  sourceType: module
-rules: {}
+  jest: true
+
+parser: babel-eslint
+
+extends:
+  - 'airbnb-base'
+  - 'plugin:jest/recommended'
+
+rules:
+  no-console: 0
