--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tavira-gendiff",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Compares two configuration files and shows a difference.",
   "main": "dist/index.js",
   "bin": {
@@ -28,7 +28,8 @@
   },
   "homepage": "https://github.com/tavira/project-lvl2-s451#readme",
   "dependencies": {
-    "commander": "^2.19.0"
+    "commander": "^2.19.0",
+    "lodash": "^4.17.11"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
@@ -40,6 +41,7 @@
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-jest": "^22.4.1"
+    "eslint-plugin-jest": "^22.4.1",
+    "jest": "^24.5.0"
   }
 }
